--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "apexcharts": "^3.44.0",
         "lucide-react": "^0.263.1",
         "react": "^18.2.0",
         "react-apexcharts": "^1.4.1",
