--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,17 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "apexcharts": "^3.44.0",
+        "axios": "^1.6.1",
+        "formik": "^2.4.5",
         "lucide-react": "^0.263.1",
         "react": "^18.2.0",
         "react-apexcharts": "^1.4.1",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.17.0",
+        "react-loadingg": "^1.7.2",
+        "react-router-dom": "^6.18.0",
         "react-scripts": "5.0.1",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "yup": "^1.3.2"
     },
     "scripts": {
         "start": "react-scripts start",
